# EnergyForecasting

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
engine/: manage.py  pyproject.toml
engine/src/engine/: __init__.py  config.py  django_settings.py  logging_config.py  main.py  models.py  series_utils.py
engine/src/engine/config/: config.py  path.env  weather.env
engine/src/engine/darts_pipeline/: __init__.py  builder.py  runner.py  spec.py
engine/src/engine/data_model/: base_schema.py  covariates.py  holidays.py  load_model.py  type_mapping.py  weather_model.py
engine/src/engine/database/: initialise.py  manage_conn.py
engine/src/engine/featurize/: __init__.py  calendar.py  lags.py  selectors.py
engine/src/engine/forecaster/: base_model.py  chronos.py  naive_seasonal.py  tsmixers_nixtla.py
engine/src/engine/ingestion/: get_all_covariates.py  get_holidays.py  load_ingestion.py  weather_ingestion.py
engine/src/engine/model_configs/: __init__.py  lightgbm.py  nbeats.py
engine/src/engine/models/: __init__.py  lightgbm.py  nbeats.py  tft.py
engine/tests/: test_chronos.py  test_config.py  test_covariates.py  test_naive_seasonal.py  test_tsmixer.py
src/: config.py
src/api/: main.py
src/api/data/routers/: timeseries_route.py  y_series_route.py
src/api/data/schemas/: openmeteo_api.py  timeseries_api.py  y_series_api.py
src/data/ingestion/: openmeteo_client.py  openmeteo_geocoding.py
src/data/schemas/: openmeteo_api.py  timeseries.py  y_series.py
src/frontend/: streamlit.py
tests/api/: test_timeseries_api.py  test_y_series_api.py  test_y_series_route.py
tests/api/routers/: test_timeseries_route.py  test_y_series_route.py
tests/frontend/: conftest.py  test_streamlit.py
tests/strategies/: timeseries_data_strategy.py
webapp/: pyproject.toml
