[project]
name = "energyforecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "engine",
]

[tool.uv.workspace]
members = [
    "engine",
    "webapp",
]

[tool.uv.sources]
engine = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
