[project]
name = "energyforecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chronos-forecasting>=2.3.1",
    "engine",
    "holidays>=0.100",
    "llvmlite>=0.48.0",
    "neuralforecast>=3.2.0",
]

[tool.uv.workspace]
members = [
    "engine",
    "webapp",
]

[tool.uv.sources]
engine = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
