[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"


[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lomi", email = "lomir@.com" }
]
requires-python = ">=3.14"
dependencies = [
    "torch>=2.12.1",
    "numpy>=2.5.0"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu132" },
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
