[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"


[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lomi", email = "lomir@.com" }
]
requires-python = ">=3.14"
dependencies = [
    "torch>=2.12.1",
    "numpy>=2.4.0",
    "pandas>=3.0",
    "openpyxl>=3.1.3,",
    "openmeteo-requests>=1.7.5",
    "requests-cache>=1.3.3",
    "retry-requests>=2.0.0",
    "django>6.0",
    "loguru>=0.7.3",
    "darts>=0.46.0",
    "holidays>=0.100",
]


[tool.uv]
prerelease = "allow"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu132" },
]


[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
